クラス図修正

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+spring.datasource.driver-class-name: org.postgresql.Driver
+spring.datasource.url: jdbc:postgresql://localhost:5432/fullness_ec
+#spring.datasource.url: jdbc:postgresql://<RDSのやつ>:5432/fullness_ec
+spring.datasource.username: fullness_ec
+spring.datasource.password: fullness_ec
+
+mybatis.type-aliases-package=com.fullness.ec.entity
