logの出力がうまくいってないかも

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.username: fullness_ec
 spring.datasource.password: fullness_ec
 
 mybatis.type-aliases-package=com.fullness.ec.entity
+
+logging.file.path=/log
+logging.file.name=/log/debug.log
+logging.level.root=INFO
