商品検索画面　プルダウン実装、ページネーションの実装途中

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.password: fullness_ec
 mybatis.type-aliases-package=com.fullness.ec.entity
 
 logging.file.path=/log
-logging.file.name=/log/debug.log
+logging.file.name=debug.log
 logging.level.root=INFO
