--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.password: fullness_ec
 
 mybatis.type-aliases-package=com.fullness.ec.entity
 
-logging.file.path=/log
+logging.level.root=DEBUG
+logging.level.com.fullness.ec=DEBUG
 logging.file.name=debug.log
-logging.level.root=INFO
