不要な注入を消去

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.password: fullness_ec
 
 mybatis.type-aliases-package=com.fullness.ec.entity
 
-logging.level.root=DEBUG
-logging.level.com.fullness.ec=DEBUG
+logging.level.root=INFO
+logging.level.com.fullness.ec=INFO
 logging.file.name=debug.log
