--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_DB: fullness-ec
+          POSTGRES_DB: fullness_ec
           POSTGRES_USER: fullness_ec
           POSTGRES_PASSWORD: fullness_ec
         options: >-
