--- a/build.gradle
+++ b/build.gradle
@@ -65,3 +65,6 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+tasks.withType(Test) {
+    systemProperty "file.encoding", "UTF-8"
+}
