--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name: org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://fullness-ec.cj468gk42i83.ap-northeast-1.rds.amazonaws.com:5432/fullness_ec
+spring.datasource.url=jdbc:postgresql://fullness-ec.cz226k2o8v4z.ap-northeast-1.rds.amazonaws.com:5432/fullness_ec
 spring.datasource.username=fullness_ec
 spring.datasource.password=fullness_ec
 # 新商品登録時の画像ファイルの保存先の指定
