--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,22 @@
 
-spring.datasource.driver-class-name: org.postgresql.Driver
-spring.datasource.url: jdbc:postgresql://localhost:5432/fullness_ec
+#spring.datasource.driver-class-name: org.postgresql.Driver
+#spring.datasource.url: jdbc:postgresql://localhost:5432/fullness_ec
 #spring.datasource.url: jdbc:postgresql://fullness-ec.cz226k2o8v4z.ap-northeast-1.rds.amazonaws.com:5432/fullness_ec
-spring.datasource.username: fullness_ec
-spring.datasource.password: fullness_ec
+#spring.datasource.username: fullness_ec
+#spring.datasource.password: fullness_ec
 
-mybatis.type-aliases-package=com.fullness.ec.entity
+#mybatis.type-aliases-package=com.fullness.ec.entity
 
-logging.level.root=INFO
-logging.level.com.fullness.ec=INFO
-logging.file.name=debug.log
+#logging.level.root=INFO
+#logging.level.com.fullness.ec=INFO
+#logging.file.name=debug.log
+
+spring.datasource.url=jdbc:postgresql://fullness-ec.cz226k2o8v4z.ap-northeast-1.rds.amazonaws.com:5432/fullness_ec
+spring.datasource.username=fullness_ec
+spring.datasource.password=fullness_ec
+spring.datasource.driver-class-name: org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+# 新商品登録時の画像ファイルの保存先の指定
+spring.web.resources.static-locations=file:/home/ubuntu/sboot/webapp/,classpath:/static/
