--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,11 @@
-
+spring.datasource.driver-class-name: org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://fullness-ec.cz226k2o8v4z.ap-northeast-1.rds.amazonaws.com:5432/fullness_ec
 spring.datasource.username=fullness_ec
 spring.datasource.password=fullness_ec
-spring.datasource.driver-class-name: org.postgresql.Driver
+
+server.tomcat.remoteip.remote-ip-header=x-forwarded-for
+server.tomcat.remoteip.protocol-header=x-forwarded-proto
+
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
