--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,7 @@ spring.datasource.password: fullness_ec
 
 mybatis.type-aliases-package=com.fullness.ec.entity
 
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=html
-spring.thymeleaf.debug=true
-
-#logging.level.root=INFO
-#logging.level.com.fullness.ec=INFO
-#logging.file.name=debug.log
+logging.level.root=INFO
+logging.level.com.fullness.ec=INFO
+logging.file.name=debug.log
 
