--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.driver-class-name: org.postgresql.Driver
-# spring.datasource.url: jdbc:postgresql://localhost:5432/fullness_ec
-spring.datasource.url: jdbc:postgresql://fullness-ec.cz226k2o8v4z.ap-northeast-1.rds.amazonaws.com:5432/fullness_ec
+spring.datasource.url: jdbc:postgresql://localhost:5432/fullness_ec
+# spring.datasource.url: jdbc:postgresql://fullness-ec.cz226k2o8v4z.ap-northeast-1.rds.amazonaws.com:5432/fullness_ec
 spring.datasource.username: fullness_ec
 spring.datasource.password: fullness_ec
 
