--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
       #     name: test-reports
       #     path: build/reports/tests/test
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build -x test
       - name: save build artifact
         uses: actions/upload-artifact@v3
         if: always()
