--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,3 +4,7 @@ spring.datasource.username=fullness_ec
 spring.datasource.password=fullness_ec
 # 新商品登録時の画像ファイルの保存先の指定
 spring.web.resources.static-locations=file:/home/ubuntu/sboot/webapp/,classpath:/static/
+
+# JPA & Hibernate properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
