--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,17 @@
 # spring.datasource.username: fullness_ec
 # spring.datasource.password: fullness_ec
 
+spring.datasource.driver-class-name: org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://fullness-ec.cz226k2o8v4z.ap-northeast-1.rds.amazonaws.com:5432/fullness_ec
+spring.datasource.username=fullness_ec
+spring.datasource.password=fullness_ec
+# 新商品登録時の画像ファイルの保存先の指定
+spring.web.resources.static-locations=file:/home/ubuntu/sboot/webapp/,classpath:/static/
+
+# JPA & Hibernate properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
 mybatis.type-aliases-package=com.fullness.ec.entity
 
 logging.level.root=INFO
