--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,5 @@ mybatis.type-aliases-package=com.fullness.ec.entity
 
 logging.level.root=INFO
 logging.level.com.fullness.ec=INFO
-#logging.file.name=debug.log
+logging.file.name=debug.log
 
