Actuator処理のbuild.gradle/application.properties変更点（Actuator記述）

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,10 @@ spring.jpa.hibernate.ddl-auto=update
 
 mybatis.type-aliases-package=com.fullness.ec.entity
 
+# Actuator
+management.endpoints.web.exposure.include=health
+
+
 logging.level.root=INFO
 logging.level.com.fullness.ec=INFO
 logging.file.name=debug.log
