--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,10 @@ dependencies {
 	
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.data:spring-data-commons'
+
+	//Actuator (9/20)
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
 }
 
 tasks.named('test') {
