--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,11 @@ mybatis.type-aliases-package=com.fullness.ec.entity
 # Actuator
 management.endpoints.web.exposure.include=health
 
+#Actuator2
+management.endpoint.health.probes.enabled=true
+management.endpoint.health.show-details=always
+
+
 
 logging.level.root=INFO
 logging.level.com.fullness.ec=INFO
