--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,10 @@ management.endpoints.web.exposure.include=health
 management.endpoint.health.probes.enabled=true
 management.endpoint.health.show-details=always
 
+#Actuator3
+management.endpoint.health.group.liveness.include=*
+management.endpoint.health.group.readiness.include=*
+
 
 
 logging.level.root=INFO
