--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,15 +19,15 @@ spring.jpa.hibernate.ddl-auto=update
 mybatis.type-aliases-package=com.fullness.ec.entity
 
 # Actuator
-management.endpoints.web.exposure.include=health
+# management.endpoints.web.exposure.include=health
 
 #Actuator2
-management.endpoint.health.probes.enabled=true
-management.endpoint.health.show-details=always
+# management.endpoint.health.probes.enabled=true
+# management.endpoint.health.show-details=always
 
 #Actuator3
-management.endpoint.health.group.liveness.include=*
-management.endpoint.health.group.readiness.include=*
+# management.endpoint.health.group.liveness.include=*
+# management.endpoint.health.group.readiness.include=*
 
 
 
