--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ dependencies {
 	implementation 'org.springframework.data:spring-data-commons'
 
 	//Actuator (9/20)
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	// implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 }
 
