--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name: org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://fullness-ec1.cz226k2o8v4z.ap-northeast-1.rds.amazonaws.com:5432/fullness_ec
 spring.datasource.username=fullness_ec
 spring.datasource.password=fullness_ec
-# 新商品登録時の画像ファイルの保存先の指定
+# 新商品登録時の画像ファイルの保存先の指定c
 spring.web.resources.static-locations=file:/home/ubuntu/sboot/webapp/,classpath:/static/
 
 # JPA & Hibernate properties
